...
            <objects>
                <viewController id="Jz2-Ws-kRk" customClass="SearchViewController" customModule="daumImageSearchAPI" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="bXa-Pl-jX1">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <searchBar contentMode="redraw" placeholder="검색어를 입력해주세요" translatesAutoresizingMaskIntoConstraints="NO" id="eAh-SJ-yFZ">
                                <rect key="frame" x="0.0" y="44" width="375" height="56"/>
                                <textInputTraits key="textInputTraits"/>
                                <scopeButtonTitles>
                                    <string>Title</string>
                                    <string>Title</string>
                                </scopeButtonTitles>
...
                                    </collectionViewCell>
                                </cells>
                            </collectionView>
                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CZB-da-vTs">
                                <rect key="frame" x="0.0" y="100" width="375" height="678"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="검색 결과가 없습니다." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h8F-Oz-lLz">
                                        <rect key="frame" x="114.66666666666669" y="200" width="146" height="21"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                </subviews>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fh5-pY-63o">
                                <rect key="frame" x="10" y="54" width="50" height="50"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="50" id="Rb3-7u-K16"/>
                                    <constraint firstAttribute="height" constant="50" id="vi8-kO-HH4"/>
                                </constraints>
                                <state key="normal" image="close"/>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="Vff-sg-NeQ"/>
                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <constraints>
                            <constraint firstItem="Vff-sg-NeQ" firstAttribute="bottom" secondItem="sit-pm-Ev1" secondAttribute="bottom" id="6Ca-87-Jhs"/>
...
