//
//  daumImageSearchAPIUITests.swift
//  daumImageSearchAPIUITests
//
//  Created by colbylim on 2020/11/01.
//

import XCTest

class daumImageSearchAPIUITests: XCTestCase {

    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testExample() throws {
        // UI tests must launch the application that they test.
        let app = XCUIApplication()
        app.launch()
        
        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
        
        let searchField = app.searchFields["검색어를 입력해주세요"]
        searchField.tap()
        
        searchField.typeText("브랜디")
        
        sleep(3)
        
        let element = app.collectionViews.children(matching: .cell).element(boundBy: 4).children(matching: .other).element
        element.tap()
        
        sleep(5)
        
        app.buttons["close"].tap()
        
        element.swipeUp()
        element.swipeUp()
        
        searchField.tap()
       
        let deleteKey = app/*@START_MENU_TOKEN@*/.keys["delete"]/*[[".keyboards",".keys[\"삭제\"]",".keys[\"delete\"]"],[[[-1,2],[-1,1],[-1,0,1]],[[-1,2],[-1,1]]],[0]]@END_MENU_TOKEN@*/
        deleteKey.tap()
        deleteKey.tap()
        deleteKey.tap()
        deleteKey.tap()
        deleteKey.tap()

        searchField.tap()
        searchField.typeText("검색 결과 없음 - ㄷㅇㄷㄱㄹㄷㅇ")
        
        sleep(3)
        
        app.staticTexts["검색 결과가 없습니다."].tap()
        
        sleep(3)
    }

    func testLaunchPerformance() throws {
        if #available(macOS 10.15, iOS 13.0, tvOS 13.0, *) {
            // This measures how long it takes to launch your application.
            measure(metrics: [XCTApplicationLaunchMetric()]) {
                XCUIApplication().launch()
            }
        }
    }
}
